--- a/apis.yml
+++ b/apis.yml
@@ -1,4 +1,4 @@
-aid: apis-io
+aid: apis-io-tags
 specificationVersion: '0.18'
 name: APIs.io Tags API
 description: >-
@@ -14,7 +14,7 @@ tags:
 
 apis:
 
-  - aid: apis-io:tags-api
+  - aid: apis-io-tags:tags-api
     name: APIs.io Tags API
     description: >-
       This is the API for powering APIs.io.
